# flask-practice

./: .gitignore  README.md  app.py  fake-install.sh  pyproject.toml  toy.py
flask-pg1/: README.md  app.py  database.sql  songs.sql
flask-pg1/utils/: __init__.py  pg.py
mherman_flask-for-node-devs/: README.md  app.py  models.py
rithm-tutorial/: README.md  app.py  fake-install.sh  practice.sql
rithm-tutorial/templates/: base.html  edit.html  new.html  show.html
templates/: edit.html  index.html  show.html
