[tool.poetry]
name = "flask-practice"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
